2001-08-16  Juergen Vigna  <jug@sad.it>

	* lyxfunc.C (dispatch): implemented the new FINISHED states.

2001-08-16  John Levon  <moz@compsoc.man.ac.uk>

	* BufferView_pimpl.C: 
	* figureForm.C:
	* lyxtext.h:
	* text2.C: setParagraph takes linespacing now
 
2001-08-15  John Levon  <moz@compsoc.man.ac.uk>

	* LyxAction.C: add internal LFUN_CITATION_INSERT

	* LyXView.C: actually apply fix

	* bufferlist.C: fix open non-existent file
 
	* lyxfind.C: fix indentation
 
	* lyxfunc.C: remove unneeded assert, fix typo
 
2001-08-16  John Levon  <moz@compsoc.man.ac.uk>

	* MenuBackend.C: use "Floatname List"

2001-08-14  Dekel Tsur  <dekelts@tau.ac.il>

	* buffer.C (parseSingleLyXformat2Token): Do not generate errors
	when converting LaTeX layout to insetERT.
	Generate a non-collapsed float when reading old float

2001-08-13  Dekel Tsur  <dekelts@tau.ac.il>

	* BufferView2.C (showLockedInsetCursor): Use normal cursor shape in
	ERT insets.

2001-08-13  Juergen Vigna  <jug@sad.it>

	* text.C (fill): return 0 instead of 20 as this seems to be the more
	correct value.

2001-08-13  Dekel Tsur  <dekelts@tau.ac.il>

	* encoding.C (TransformChar): Use lyxrc.font_norm_type instead of
	lyxrc.font_norm.

2001-08-13  Juergen Vigna  <jug@sad.it>

	* lyxfind.C (LyXReplace): fixed not single-replacing characters with
	casesensitive off.
	(SearchBackward): comment out the unlocking of the inset_owner this
	should not be needed!

2001-08-11  Dekel Tsur  <dekelts@tau.ac.il>

	* Many files: Remove inherit_language, and add latex_language

	* BufferView2.C (showLockedInsetCursor): Fix cursor shape in
	collapsible insets.

2001-08-10  Juergen Vigna  <jug@sad.it>

	* text.C (prepareToPrint): fixed hfill-width in draw!

	* BufferView2.C (selectLastWord): save the selection cursor as this
	now is cleared in the function LyXText::clearSelection!

2001-08-08  Juergen Vigna  <jug@sad.it>

	* BufferView_pimpl.C (Dispatch): use a non-cut-buffer cut on DELTE
	BACKSPACE type functions.
