@@ -264,7 +264,7 @@ bool FormMathsPanel::input(FL_OBJECT *, long data)
 
 void FormMathsPanel::insertSymbol(string const & sym) const
 {
-	lv_->getLyXFunc()->dispatch(LFUN_INSERT_MATH, sym);
+	lv_->getLyXFunc()->dispatch(LFUN_INSERT_MATH, '\\' + sym);
 }
 
 
